--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,11 @@
 <!--                <scope>import</scope>-->
 <!--            </dependency>-->
 
-
+            <dependency>
+                <groupId>io.github.classgraph</groupId>
+                <artifactId>classgraph</artifactId>
+                <version>4.8.139</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
